docs/v7.1/properties/P125.md
---
layout: page
title: P125 a mobilisé l’objet du type (a été le type d’objet employé pour)
titleEn: P125 used object of type (was type of object used in) - a mobilisé l’objet du type (a été le type d’objet employé pour)
permalink: /v7.1/proprietes/P125
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
<p>E7 Activity. P32 used general technique (was technique of): E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> . <code class="language-plaintext highlighter-rouge">P32_a_mobilisé_comme_technique_générale (a_été_la_technique_générale_mise_en_œuvre_dans)</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property associates an instance of E7 Activity to an instance of E55 Type, which defines used in an instance of E7 Activity, when the specific instance is either unknown or not of interest, such as use of "a hammer".</p>
</td>
<td>
<p>Cette propriété associe une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> à une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code>. <code class="language-plaintext highlighter-rouge">P125_a_mobilisé_l'objet_du_type (a_été_le_type_d’objet_employé_pour)</code> est utilisée pour classifier, avec une instance de  <code class="language-plaintext highlighter-rouge">E55_Type</code>, une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code> utilisée dans une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> lorsque la nature spécifique de cette instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code> ne présente pas d’intérêt ou est inconnue, comme l'utilisation d'« un marteau ». </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>at the Battle of Agincourt (E7), the English archers <em>used object of type</em> long bow (E55) (Curry, 2015)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>À la bataille d’Azincourt (<code class="language-plaintext highlighter-rouge">E7_Activité</code>), les archers anglais ont mobilisé les objets du type (<code class="language-plaintext highlighter-rouge">P125_a_mobilisé_l'objet_du_type</code>) « arc long » (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Curry, 2015)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P125(x,y) ⇒ E7(x)</p>
<p>P125(x,y) ⇒ E55(y)</p>
<p>P125(x,y) ⇔ (∃z) [E70(z) ∧ P16(x,z) ∧  P2(z,y)]</p>
</td>
<td>
<p>P125(x,y) ⇒ E7(x)</p>
<p>P125(x,y) ⇒ E55(y)</p>
<p>P125(x,y) ⇔ (∃z) [E70(z) ∧ P16(x,z) ∧  P2(z,y)]</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
