docs/v7.1.2/properties/P125.md
---
layout: page
title: P125 a mobilisé l’objet du type (a été le type d’objet employé pour)
titleEn: P125 used object of type (was type of object used in) - a mobilisé l’objet du type (a été le type d’objet employé pour)
permalink: /v7.1.2/proprietes/P125
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
<p>E7 Activity. P32 used general technique (was technique of): E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> . <code class="language-plaintext highlighter-rouge">P32_a_mobilisé_comme_technique_générale (a_été_la_technique_générale_mise_en_œuvre_dans)</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property associates an instance of E7 Activity to an instance of E55 Type, which classifies an instance of E70 Thing used in an instance of E7 Activity, when the specific instance is either unknown or not of interest, such as use of "a hammer".</p>
<p>This property is a shortcut of the more fully developed path from E7 Activity through P16 used specific object, E70 Thing, P2 has type, to E55 Type</p>
</td>
<td>
<p>Cette propriété associe une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> à une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code>. <code class="language-plaintext highlighter-rouge">P125_a_mobilisé_l'objet_du_type (a_été_le_type_d’objet_employé_pour)</code> est utilisée pour classifier, avec une instance de  <code class="language-plaintext highlighter-rouge">E55_Type</code>, une instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code> utilisée dans une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> lorsque la nature spécifique de cette instance de <code class="language-plaintext highlighter-rouge">E70_Chose</code> ne présente pas d’intérêt ou est inconnue, comme l'utilisation d'« un marteau ». </p>
<p>Cette propriété est un raccourci du chemin sémantique suivant <code class="language-plaintext highlighter-rouge">E7_Activité</code>. <code class="language-plaintext highlighter-rouge">P16_a_mobilisé_l’objet_spécifique</code> : <code class="language-plaintext highlighter-rouge">E70_Chose</code>. <code class="language-plaintext highlighter-rouge">P2_a_pour_type</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code>.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>The English archers’ activity in the Battle of Agincourt (E7) used object of type long bow (E55). (Curry, 2015)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Les activités des archers anglais lors de la bataille d’Azincourt (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) ont mobilisé les objets du type (<code class="language-plaintext highlighter-rouge">P125_a_mobilisé_l'objet_du_type</code>) « arc long » (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Curry, 2015)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P125(x,y) ⇒ E7(x)</p>
<p>P125(x,y) ⇒ E55(y)</p>
<p>P125(x,y) ⇔ (∃z) [E70(z) ∧ P16(x,z) ∧ P2(z,y)]</p>
</td>
<td>
<p>P125(x,y) ⇒ E7(x)</p>
<p>P125(x,y) ⇒ E55(y)</p>
<p>P125(x,y) ⇔ (∃z) [E70(z) ∧ P16(x,z) ∧  P2(z,y)]</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
